[package]
name = "llama_rust"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/primitives.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
path = "src/main.rs"
name = "llama_rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
packed_simd = { version = "0.3.8", optional = true }
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = { version = "1.7.0", optional = true }

[features]
default = []
simd = ["packed_simd"]
parallel = ["rayon"]

[profile.release]
debug = true
lto = true
codegen-units = 1
